compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__nested_modules.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Module(
            ModItemDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 2,
                        start_col: 5,
                    },
                },
                body: Some(
                    [
                        Module(
                            ModItemDecl {
                                attrs: [],
                                vis: Private,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 21,
                                        end: 26,
                                        start_line: 3,
                                        start_col: 9,
                                    },
                                },
                                body: Some(
                                    [
                                        Function(
                                            FnDecl {
                                                attrs: [],
                                                vis: Private,
                                                qualifiers: FnQualifiers {
                                                    is_const: false,
                                                    is_async: false,
                                                    is_unsafe: false,
                                                },
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 40,
                                                        end: 44,
                                                        start_line: 4,
                                                        start_col: 12,
                                                    },
                                                },
                                                type_params: None,
                                                params: [],
                                                return_type: None,
                                                effects: None,
                                                where_clause: None,
                                                body: Some(
                                                    Block {
                                                        statements: [],
                                                        expr: None,
                                                        span: Span {
                                                            start: 47,
                                                            end: 49,
                                                            start_line: 4,
                                                            start_col: 19,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 37,
                                                    end: 49,
                                                    start_line: 4,
                                                    start_col: 9,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                                span: Span {
                                    start: 17,
                                    end: 55,
                                    start_line: 3,
                                    start_col: 5,
                                },
                            },
                        ),
                    ],
                ),
                span: Span {
                    start: 1,
                    end: 57,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 57,
        start_line: 2,
        start_col: 1,
    },
}
